# schulsync

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: beispiel-report.html  dsgvo.md  funktionsweise.md
examples/: lehrkraefte.csv  schild-export-2025.csv  schild-export-2026-nachzuegler.csv  schild-export-2026.csv  schild-export-legacy-cp1252.csv  schulsync.example.yaml
lab/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  schulsync.lab.yaml
scripts/: erzeuge_beispieldaten.py  erzeuge_readme_bilder.py
src/schulsync/: __init__.py  applier.py  cli.py  config.py  csvsource.py  ldapclient.py  models.py  passwords.py  planner.py  report.py  usernames.py
src/schulsync/templates/: briefe.html.j2  report.html.j2
tests/: test_csvsource.py  test_planner.py  test_usernames.py
tests/integration/: conftest.py  test_schuljahreswechsel.py
