[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "schulsync"
version = "0.1.1"
description = "Schuljahreswechsel ohne Handarbeit: deklarative Synchronisation von Schülerkonten aus der Schulverwaltung (SchILD-NRW, ASV-BW, CSV) ins Active Directory."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Haydar Kozat", email = "haydarkozat@hotmail.com" }]
keywords = [
    "schule",
    "active-directory",
    "samba",
    "schuljahreswechsel",
    "schild-nrw",
    "asv-bw",
    "schulverwaltung",
    "ldap",
    "dsgvo",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: German",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Education",
    "Topic :: System :: Systems Administration :: Authentication/Directory :: LDAP",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "ldap3>=2.9.1",
    "pydantic>=2.7",
    "PyYAML>=6.0",
    "Jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/haydarkozat/schulsync"
Repository = "https://github.com/haydarkozat/schulsync"
Issues = "https://github.com/haydarkozat/schulsync/issues"

[project.scripts]
schulsync = "schulsync.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/schulsync"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: Tests gegen einen echten Samba-AD-DC (Docker-Lab erforderlich)",
]
addopts = "-m 'not integration'"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# B008: `typer.Option(...)` im Default ist das dokumentierte Typer-Idiom.
"src/schulsync/cli.py" = ["B008"]
